[project]
name = "use-minkowski-engine"
version = "0.1.0"
description = "Attempt to use MinkowskiEngine"
readme = {file = "README.org", content-type = "text/org"}
requires-python = ">=3.12.11"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
default = true
